<resources>
    <string name="app_name">Food Feed</string>

    <!-- Food details -->
    <string name="id">ID: </string>
    <string name="foodName">Food name: </string>
    <string name="description">Description: </string>
    <string name="foodType">Food type: </string>
    <string name="foodPrice">Price: </string>
    <string name="foodDiscount">Mark as vegetarian</string>

    <!-- Choose image dialog -->
    <string name="img_dialog_title">Choose image from...</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>

    <!-- Buttons -->
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>

    <string name="title_activity_main">Food Feed</string>
    <string name="action_settings">Settings</string>
</resources>
